# praktyki_nov_2022

./: .gitignore  .gitmodules  CMakeLists.txt  index.html  sdkconfig.defaults
components/AsyncTCP/: CMakeLists.txt
components/TaskScheduler/: CMakeLists.txt
components/painlessMesh/: CMakeLists.txt
extras/: additional.txt  createfont.py
main/: CMakeLists.txt
main/display/: EPD.h  display_main.cpp
main/src/: DeskThing.cpp  arduino_init.c  arduino_init.h  debug.h  main.c  mainold.c  override-arduino-bluetooth.c
main/src/bluetooth/: hid.c  hid.h  hid_device_le_prf.c  main.c  main.h
main/src/config/: persistconfig.cpp  persistconfig.h
main/src/display/: DEV_Config.cpp  DEV_Config.h  Debug.h  EPD_2in13_V3.cpp  GUI_Paint.cpp  GUI_Paint.h  display_main.cpp  display_main.h  font8.cpp
main/src/http/: main.cpp  main.h
main/src/mesh/: main.cpp  main.h
