idf_component_register(SRCS 
                    display/DEV_Config.cpp
                    display/EPD_2in13_V3.cpp
                    display/font8.cpp
                    display/font16.cpp
                    display/Gui_Paint.cpp
                    display/display_main.cpp
                    config/persistconfig.cpp
                    DeskThing.cpp
                    
                    INCLUDE_DIRS ".")
