idf_component_register(SRCS
    src/display/DEV_Config.cpp
    src/display/EPD_2in13_V3.cpp
    src/display/font8.cpp
    src/display/font16.cpp
    src/display/Gui_Paint.cpp
    src/display/display_main.cpp
    src/config/persistconfig.cpp
    src/bluetooth/main.c
    src/bluetooth/hid.c
    INCLUDE_DIRS ".")
